@@ -1,0 +1,62 @@
+/**   
+ * License Agreement for Jaeksoft OpenSearchServer
+ *
+ * Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+ * 
+ * http://www.open-search-server.com
+ * 
+ * This file is part of Jaeksoft OpenSearchServer.
+ *
+ * Jaeksoft OpenSearchServer is free software: you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ * Jaeksoft OpenSearchServer is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with Jaeksoft OpenSearchServer. 
+ *  If not, see <http://www.gnu.org/licenses/>.
+ **/
+
+package com.jaeksoft.searchlib.analysis.filter;
+
+import org.apache.lucene.analysis.TokenStream;
+import org.apache.lucene.analysis.ngram.EdgeNGramTokenFilter;
+import org.apache.lucene.analysis.ngram.EdgeNGramTokenFilter.Side;
+
+import com.jaeksoft.searchlib.SearchLibException;
+import com.jaeksoft.searchlib.analysis.FilterFactory;
+
+public class EdgeNGramFilter extends FilterFactory {
+
+	private int min;
+	private int max;
+	private Side side;
+
+	@Override
+	public void setProperty(String key, String value) throws SearchLibException {
+		super.setProperty(key, value);
+		if ("min_gram".equals(key))
+			min = Integer.parseInt(value);
+		else if ("max_gram".equals(key))
+			max = Integer.parseInt(value);
+		else if ("side".equals(key))
+			side = Side.getSide(value);
+	}
+
+	@Override
+	public TokenStream create(TokenStream input) {
+		return new EdgeNGramTokenFilter(input, side, min, max);
+	}
+
+	private final static String[] PROPLIST = { "min_gram", "max_gram", "side" };
+
+	@Override
+	public String[] getPropertyKeyList() {
+		return PROPLIST;
+	}
+}
